Change small things to leverage Java 17 syntax