@@ -31,8 +31,7 @@ public class RecommendedHttpCodesContractInfoFuzzer extends BaseContractInfoFuzz
                 .filter(code -> !data.getResponseCodes().contains(code)).toList();
 
         List<String> missingCodes = missingCodesWithOrLists.stream()
-                .filter(code -> Arrays.stream(code.split(Pattern.quote("|"))).noneMatch(splitCode -> data.getResponseCodes().contains(splitCode)))
-                .collect(Collectors.toList());
+                .filter(code -> Arrays.stream(code.split(Pattern.quote("|"))).noneMatch(splitCode -> data.getResponseCodes().contains(splitCode))).toList();
 
         if (missingCodes.isEmpty()) {
             testCaseListener.reportInfo(log, "All recommended HTTP codes are defined!");
